--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -1,209 +1,226 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Factory
-    metadata:
-      name: secret-details
-    spec:
-      key: secret-details
-      sidebarTags:
-        - secret-sidebar
-      withScrollableMainContentCard: true
-      urlsToFetch:
-        - "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/secrets/{6}"
-      data:
-        - type: antdFlex
-          data:
-            id: 3602
-            gap: 6
-            align: center
-            style:
-              marginBottom: 24px
-          children:
-            - type: antdText
-              data:
-                id: 36021
-                text: S
-                title: secret
-                style:
-                  fontSize: 20px
-                  lineHeight: 24px
-                  padding: "0 9px"
-                  borderRadius: "20px"
-                  minWidth: 24
-                  display: inline-block
-                  textAlign: center
-                  whiteSpace: nowrap
-                  color: "#fff"
-                  backgroundColor: "#c46100"
-                  fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-                  fontWeight: 400
-
-            - type: parsedText
-              data:
-                id: 21012
-                text: "{reqs[0]['metadata', 'name']}"
-                style:
-                  fontSize: 20px
-                  lineHeight: 24px
-                  fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-
-        - type: antdTabs
-          data:
-            id: 20
-            defaultActiveKey: "details"
-            items:
-              - key: "details"
-                label: "Details"
-                children:
-                  - type: ContentCard
-                    data:
-                      id: 2000
-                      style:
-                        marginBottom: 24px
-                    children:
-                      - type: antdText
-                        data:
-                          id: 1999
-                          text: "Secret details"
-                          strong: true
-                          style:
-                            fontSize: 20
-                            marginBottom: 12px
-                      - type: Spacer
-                        data:
-                          id: 1999-spacer
-                          "$space": 16
-                      - type: antdRow
-                        data:
-                          id: 2001
-                          gutter: [48, 12]
-                        children:
-                          - type: antdCol
-                            data:
-                              id: 2002
-                              span: 12
-                            children:
-                              - type: antdFlex
-                                data:
-                                  id: 2100
-                                  vertical: true
-                                  gap: 24
-                                children:
-                                  - type: antdFlex
-                                    data:
-                                      id: 2101
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 21011
-                                          strong: true
-                                          text: "Name"
-                                      - type: parsedText
-                                        data:
-                                          id: 21012
-                                          text: "{reqs[0]['metadata', 'name']}"
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 17
-                                      vertical: true
-                                      gap: 8
-                                    children:
-                                      {{ include "incloud-web-resources.factory.links.namespace-details" . | nindent 42}}
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 17
-                                      vertical: true
-                                      gap: 8
-                                    children:
-                                      {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 26
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
-
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 3600
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      {{ include "incloud-web-resources.factory.time.create" . | nindent 38}}
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 3600
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 3601
-                                          strong: true
-                                          text: "Owner"
-                                      - type: antdFlex
-                                        data:
-                                          id: 3602
-                                          gap: 6
-                                          align: center
-                                        children:
-                                          - type: antdText
-                                            data:
-                                              id: 36021
-                                              text: "RS"
-                                          - type: parsedText
-                                            data:
-                                              id: 36022
-                                              text: "{reqs[0]['metadata', 'ownerReferences']}"
-
-                          - type: antdCol
-                            data:
-                              id: 2003
-                              span: 12
-                            children:
-                              - type: antdFlex
-                                data:
-                                  id: 2200
-                                  vertical: true
-                                  gap: 24
-                                children:
-                                  - type: antdFlex
-                                    data:
-                                      id: 2201
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 22011
-                                          strong: true
-                                          text: "Type"
-                                      - type: parsedText
-                                        data:
-                                          id: 22012
-                                          text: "{reqs[0]['type']}"
-
-              - key: "yaml"
-                label: "YAML"
-                children:
-                  - type: YamlEditorSingleton
-                    data:
-                      id: 999999999
-                      cluster: "{2}"
-                      isNameSpaced: true
-                      type: "builtin"
-                      typeName: secrets
-                      prefillValuesRequestIndex: 0
-                      substractHeight: 400
-
-kind: List
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Factory
 metadata:
+  name: secret-details
+spec:
+  key: secret-details
+  sidebarTags:
+    - secret-sidebar
+  withScrollableMainContentCard: true
+  urlsToFetch:
+    - "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/secrets/{6}"
+
+  # Header row with badge and Secret name
+  data:
+    - type: antdFlex
+      data:
+        id: header-row
+        gap: 6
+        align: center
+        style:
+          marginBottom: 24px
+      children:
+        # Secret badge
+        - type: antdText
+          data:
+            id: badge-secret
+            text: S
+            title: secret
+            style:
+              fontSize: 20px
+              lineHeight: 24px
+              padding: "0 9px"
+              borderRadius: "20px"
+              minWidth: 24
+              display: inline-block
+              textAlign: center
+              whiteSpace: nowrap
+              color: "#fff"
+              backgroundColor: "#c46100"
+              fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
+              fontWeight: 400
+        # Secret name
+        - type: parsedText
+          data:
+            id: header-secret-name
+            text: "{reqsJsonPath[0]['.metadata.name']['-']}"
+            style:
+              fontSize: 20px
+              lineHeight: 24px
+              fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
+
+    # Tabs with Details and YAML
+    - type: antdTabs
+      data:
+        id: secret-tabs
+        defaultActiveKey: "details"
+        items:
+          # Details tab with metadata and spec info
+          - key: "details"
+            label: "Details"
+            children:
+              - type: ContentCard
+                data:
+                  id: details-card
+                  style:
+                    marginBottom: 24px
+                children:
+                  # Title
+                  - type: antdText
+                    data:
+                      id: details-title
+                      text: "Secret details"
+                      strong: true
+                      style:
+                        fontSize: 20
+                        marginBottom: 12px
+
+                  # Spacer
+                  - type: Spacer
+                    data:
+                      id: details-spacer
+                      "$space": 16
+
+                  # Two-column layout
+                  - type: antdRow
+                    data:
+                      id: details-grid
+                      gutter: [48, 12]
+                    children:
+                      # Left column: metadata
+                      - type: antdCol
+                        data:
+                          id: col-left
+                          span: 12
+                        children:
+                          - type: antdFlex
+                            data:
+                              id: col-left-stack
+                              vertical: true
+                              gap: 24
+                            children:
+                              # Name block
+                              - type: antdFlex
+                                data:
+                                  id: meta-name-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: meta-name-label
+                                      strong: true
+                                      text: "Name"
+                                  - type: parsedText
+                                    data:
+                                      id: meta-name-value
+                                      text: "{reqsJsonPath[0]['.metadata.name']['-']}"
+
+                              # Namespace link
+                              - type: antdFlex
+                                data:
+                                  id: meta-namespace-block
+                                  vertical: true
+                                  gap: 8
+                                children:
+                                  {{ include "incloud-web-resources.factory.links.namespace-details" . | nindent 38}}
+
+                              # Labels
+                              - type: antdFlex
+                                data:
+                                  id: meta-labels-block
+                                  vertical: true
+                                  gap: 8
+                                children:
+                                  {{ include "incloud-web-resources.factory.labels" . | nindent 38}}
+
+                              # Annotations
+                              - type: antdFlex
+                                data:
+                                  id: meta-annotations-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+
+                              # Created timestamp
+                              - type: antdFlex
+                                data:
+                                  id: meta-created-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  {{ include "incloud-web-resources.factory.time.create" (dict
+                                    "req" ".metadata.creationTimestamp"
+                                    "text" "Created"
+                                  ) | nindent 38
+                                  }}
+
+                              # Owner block
+                              - type: antdFlex
+                                data:
+                                  id: meta-owner-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: meta-owner-label
+                                      strong: true
+                                      text: "Owner"
+                                  - type: antdFlex
+                                    data:
+                                      id: meta-owner-flex
+                                      gap: 6
+                                      align: center
+                                    children:
+                                      - type: parsedText
+                                        data:
+                                          id: owner-value
+                                          strong: true
+                                          text: "No owner"
+                                          style:
+                                            color: red
+
+                      # Right column: type info
+                      - type: antdCol
+                        data:
+                          id: col-right
+                          span: 12
+                        children:
+                          - type: antdFlex
+                            data:
+                              id: col-right-stack
+                              vertical: true
+                              gap: 24
+                            children:
+                              # Secret type
+                              - type: antdFlex
+                                data:
+                                  id: secret-type-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: secret-type-label
+                                      strong: true
+                                      text: "Type"
+                                  - type: parsedText
+                                    data:
+                                      id: secret-type-value
+                                      text: "{reqsJsonPath[0]['.type']['-']}"
+
+          # YAML tab
+          - key: yaml
+            label: YAML
+            children:
+              - type: YamlEditorSingleton
+                data:
+                  id: yaml-editor
+                  cluster: "{2}"
+                  isNameSpaced: true
+                  type: builtin
+                  typeName: secrets
+                  prefillValuesRequestIndex: 0
+                  substractHeight: 400
