--- a/templates/Sidebar/stock-project-factory/cronjob-details.yaml
+++ b/templates/Sidebar/stock-project-factory/cronjob-details.yaml
@@ -7,6 +7,6 @@ spec:
   id: stock-project-factory-cronjob-details
   keysAndTags:
     cronjobs:
-      - cronjob-sidebar
+      - cronjobs-sidebar
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
