--- a/templates/Factory/namespace-details.yaml
+++ b/templates/Factory/namespace-details.yaml
@@ -1,235 +1,226 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Factory
-    metadata:
-      name: namespace-details
-    spec:
-      key: namespace-details
-      sidebarTags:
-        - namespace-sidebar
-      withScrollableMainContentCard: true
-      urlsToFetch:
-        - "/api/clusters/{2}/k8s/api/v1/namespaces/{5}"
-      data:
-        - type: antdFlex
-          data:
-            id: 3602
-            gap: 6
-            align: center
-            style:
-              marginBottom: 24px
-          children:
-            - type: antdText
-              data:
-                id: 36021
-                text: "NS"
-                title: Namespace
-                style:
-                  fontSize: 20px
-                  lineHeight: 24px
-                  padding: "0 9px"
-                  borderRadius: "20px"
-                  minWidth: 24
-                  display: inline-block
-                  textAlign: center
-                  whiteSpace: nowrap
-                  color: "#fff"
-                  backgroundColor: "#1e4f18"
-                  fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-                  fontWeight: 400
-
-            - type: parsedText
-              data:
-                id: 21012
-                text: "{reqs[0]['metadata', 'name']['-']}"
-                style:
-                  fontSize: 20px
-                  lineHeight: 24px
-                  fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-
-            # - type: parsedText
-            #   data:
-            #     id: 22012
-            #     text: "{reqs[0]['status', 'phase']['-']}"
-            #     title: Pod phase
-            #     style:
-            #       fontSize: 15px
-            #       lineHeight: 24px
-            #       padding: "0 9px"
-            #       borderRadius: "20px"
-            #       minWidth: 24
-            #       display: inline-block
-            #       textAlign: center
-            #       whiteSpace: nowrap
-            #       color: "#fff"
-            #       backgroundColor: "#8a8a8a" # зелёный как для phase=Running
-            #       fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-            #       fontWeight: 400
-
-            # JSONPATH что бы отобразить статус контейнера
-            # - type: parsedText
-            #   data:
-            #     id: 21012
-            #     text: "{reqs[0]['metadata', 'name']}"
-            #     style:
-            #       fontSize: 20px
-            #       lineHeight: 24px
-            #       fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
-
-        - type: antdTabs
-          data:
-            id: 20
-            defaultActiveKey: "details"
-            items:
-              - key: "details"
-                label: "Details"
-                children:
-                  - type: ContentCard
-                    data:
-                      id: 2000
-                      style:
-                        marginBottom: 24px
-                    children:
-                      - type: antdText
-                        data:
-                          id: 1999
-                          text: "Pod details"
-                          strong: true
-                          style:
-                            fontSize: 20
-                            marginBottom: 12px
-                      - type: Spacer
-                        data:
-                          id: 1999-spacer
-                          "$space": 16
-                      - type: antdRow
-                        data:
-                          id: 2001
-                          gutter: [48, 12]
-                        children:
-                          - type: antdCol
-                            data:
-                              id: 2002
-                              span: 12
-                            children:
-                              - type: antdFlex
-                                data:
-                                  id: 2100
-                                  vertical: true
-                                  gap: 24
-                                children:
-                                  - type: antdFlex
-                                    data:
-                                      id: 2101
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 21011
-                                          strong: true
-                                          text: "Name"
-                                      - type: parsedText
-                                        data:
-                                          id: 21012
-                                          text: "{reqs[0]['metadata', 'name']['-']}"
-
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 17
-                                      vertical: true
-                                      gap: 8
-                                    children:
-                                      {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 26
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
-
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 3600
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      {{ include "incloud-web-resources.factory.time.create" . | nindent 38}}
-
-
-                                  - type: antdFlex
-                                    data:
-                                      id: 3600
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 3601
-                                          strong: true
-                                          text: "Owner"
-                                      - type: antdFlex
-                                        data:
-                                          id: 3602
-                                          gap: 6
-                                          align: center
-                                        children:
-                                          # - type: antdText
-                                          #   data:
-                                          #     id: 36021
-                                          #     text: "RS"
-                                          - type: antdText
-                                            data:
-                                              id: 36022
-                                              text: "-"
-                                              # style:
-                                              #   color: "#FF0000"
-                          - type: antdCol
-                            data:
-                              id: 2003
-                              span: 12
-                            children:
-                              - type: antdFlex
-                                data:
-                                  id: 2200
-                                  vertical: true
-                                  gap: 24
-                                children:
-                                  - type: antdFlex
-                                    data:
-                                      id: 2201
-                                      vertical: true
-                                      gap: 4
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: 22011
-                                          strong: true
-                                          text: "Status"
-                                      - type: parsedText
-                                        data:
-                                          id: 22012
-                                          text: "{reqs[0]['status', 'phase']['-']}"
-
-              - key: "yaml"
-                label: "YAML"
-                children:
-                  - type: YamlEditorSingleton
-                    data:
-                      id: 999999999
-                      cluster: "{2}"
-                      isNameSpaced: false
-                      type: "builtin"
-                      typeName: namespaces
-                      prefillValuesRequestIndex: 0
-                      substractHeight: 400
-                      # apiGroup: string
-                      # apiVersion: string
-
-kind: List
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Factory
 metadata:
+  name: namespace-details
+spec:
+  # Unique key for this factory configuration
+  key: namespace-details
+
+  # Sidebar category tags
+  sidebarTags:
+    - namespace-sidebar
+
+  # Enable scrollable content card for main section
+  withScrollableMainContentCard: true
+
+  # API endpoint for fetching Namespace details
+  urlsToFetch:
+    - "/api/clusters/{2}/k8s/api/v1/namespaces/{5}"
+
+  data:
+    # === HEADER ROW ===
+    - type: antdFlex
+      data:
+        id: header-row
+        gap: 6
+        align: center
+        style:
+          marginBottom: 24px
+      children:
+        # Badge with resource short name
+        - type: antdText
+          data:
+            id: header-badge
+            text: "NS"
+            title: Namespace
+            style:
+              fontSize: 20px
+              lineHeight: 24px
+              padding: "0 9px"
+              borderRadius: "20px"
+              minWidth: 24
+              display: inline-block
+              textAlign: center
+              whiteSpace: nowrap
+              color: "#fff"
+              backgroundColor: "#1e4f18"
+              fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
+              fontWeight: 400
+
+        # Namespace name
+        - type: parsedText
+          data:
+            id: header-name
+            text: "{reqsJsonPath[0]['.metadata.name']['-']}"
+            style:
+              fontSize: 20px
+              lineHeight: 24px
+              fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
+
+    # === MAIN TABS ===
+    - type: antdTabs
+      data:
+        id: tabs-root
+        defaultActiveKey: "details"
+        items:
+          # ------ DETAILS TAB ------
+          - key: "details"
+            label: "Details"
+            children:
+              # Main card container for details section
+              - type: ContentCard
+                data:
+                  id: details-card
+                  style:
+                    marginBottom: 24px
+                children:
+                  # Section title
+                  - type: antdText
+                    data:
+                      id: details-title
+                      text: "Namespace details"
+                      strong: true
+                      style:
+                        fontSize: 20
+                        marginBottom: 12px
+
+                  # Spacer for visual separation
+                  - type: Spacer
+                    data:
+                      id: details-spacer
+                      "$space": 16
+
+                  # Grid layout: left and right columns
+                  - type: antdRow
+                    data:
+                      id: details-grid
+                      gutter: [48, 12]
+                    children:
+                      # LEFT COLUMN: metadata
+                      - type: antdCol
+                        data:
+                          id: col-left
+                          span: 12
+                        children:
+                          - type: antdFlex
+                            data:
+                              id: left-stack
+                              vertical: true
+                              gap: 24
+                            children:
+                              # Namespace name block
+                              - type: antdFlex
+                                data:
+                                  id: name-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: name-label
+                                      strong: true
+                                      text: "Name"
+                                  - type: parsedText
+                                    data:
+                                      id: name-value
+                                      text: "{reqsJsonPath[0]['.metadata.name']['-']}"
+
+                              # Labels display block
+                              - type: antdFlex
+                                data:
+                                  id: labels-block
+                                  vertical: true
+                                  gap: 8
+                                children:
+                                  {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+
+                              # Annotations counter block
+                              - type: antdFlex
+                                data:
+                                  id: annotations-counter-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+
+                              # Creation time block
+                              - type: antdFlex
+                                data:
+                                  id: created-time-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  {{ include "incloud-web-resources.factory.time.create" (dict
+                                    "req" ".metadata.creationTimestamp"
+                                    "text" "Created"
+                                    ) | nindent 38
+                                  }}
+
+                              # Owner information block
+                              - type: antdFlex
+                                data:
+                                  id: owner-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: owner-label
+                                      strong: true
+                                      text: "Owner"
+                                  - type: antdFlex
+                                    data:
+                                      id: owner-value-container
+                                      gap: 6
+                                      align: center
+                                    children:
+                                      - type: antdText
+                                        data:
+                                          id: owner-value
+                                          text: "No owner"
+                                          style:
+                                            color: "#FF0000"
+
+                      # RIGHT COLUMN: status
+                      - type: antdCol
+                        data:
+                          id: col-right
+                          span: 12
+                        children:
+                          - type: antdFlex
+                            data:
+                              id: right-stack
+                              vertical: true
+                              gap: 24
+                            children:
+                              # Namespace status phase
+                              - type: antdFlex
+                                data:
+                                  id: status-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  - type: antdText
+                                    data:
+                                      id: status-label
+                                      strong: true
+                                      text: "Status"
+                                  - type: parsedText
+                                    data:
+                                      id: status-value
+                                      text: "{reqsJsonPath[0]['.status.phase']['-']}"
+
+          # ------ YAML TAB ------
+          - key: "yaml"
+            label: "YAML"
+            children:
+              # YAML editor for Namespace manifest
+              - type: YamlEditorSingleton
+                data:
+                  id: yaml-editor
+                  cluster: "{2}"
+                  isNameSpaced: false
+                  type: "builtin"
+                  typeName: namespaces
+                  prefillValuesRequestIndex: 0
+                  substractHeight: 400
